workloads/quarkus-rollouts-demo/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: quarkus-demo
  namespace: quarkus-demo
  labels:
    app: quarkus-demo
    app.kubernetes.io/name: quarkus-demo
    app.kubernetes.io/part-of: quarkus-demo-app
    app.openshift.io/runtime: quarkus
spec:
  to:
    kind: Service
    name: quarkus-demo-stable
    weight: 100
  alternateBackends:
  - kind: Service
    name: quarkus-demo-canary
    weight: 0
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
